--- a/index.html
+++ b/index.html
@@ -9,6 +9,18 @@
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    
+    <!-----pc version-------->
+    <div class="main__wrapper">
+        <div class="content__wrapper">
+            <!---languages----->
+            <div class="content__language__block">
+                
+            </div>
+        </div>
+    </div>
+    <!-----mobile version---------->
+    <div class="main__wrapper__mobile">
+
+    </div>
 </body>
 </html>
