--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
         <div class="content__wrapper">
             <!---languages----->
             <div class="content__language__block">
+
+            </div>
+            <!---main content----->
+            <div class="main__content__block">
                 
+            </div>
+            <!---social block--->
+            <div class="footer__social__block">
+
             </div>
         </div>
     </div>
@@ -22,5 +30,8 @@
     <div class="main__wrapper__mobile">
 
     </div>
+
+
+    <script src="./js/script.js"></script>
 </body>
 </html>
