--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
             </div>
             <!---social block--->
             <div class="footer__social__block">
-
+                <div class="footer__social__wrapper">
+                    <div class="footer__social__img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="footer__social__img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="footer__social__img">
+                        <img src="" alt="">
+                    </div>
+                    <div class="footer__social__img">
+                        <img src="" alt="">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
