--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
             <!---main content----->
             <div class="main__content__block">
                 
+
+                <!---circle---->
+                <div class="main__content__circle">
+                    <div class="main__content__circle__wrapper">
+                        <div class="circle__sub__block1"></div>
+                        <div class="circle__sub__block2"></div>
+                        <div class="circle__sub__block3"></div>
+                        <div class="circle__sub__block4"></div>
+                        <div class="circle__sub__block5"></div>
+                        <div class="circle__sub__block6"></div>
+                    </div>
+                </div>
             </div>
             <!---social block--->
             <div class="footer__social__block">
