--- a/index.html
+++ b/index.html
@@ -21,16 +21,21 @@
                 
 
                 <!---circle---->
-                <div class="main__content__circle">
-                    <div class="main__content__circle__wrapper">
-                        <div class="circle__sub__block1"></div>
-                        <div class="circle__sub__block2"></div>
-                        <div class="circle__sub__block3"></div>
-                        <div class="circle__sub__block4"></div>
-                        <div class="circle__sub__block5"></div>
-                        <div class="circle__sub__block6"></div>
+                <div class="circle__wrapper">
+                    <div class="main__content__circle__block">
+                        <div class="main__content__circle">
+                            <div class="main__content__circle__wrapper">
+                                <div class="circle__sub__block1"></div>
+                                <div class="circle__sub__block2"></div>
+                                <div class="circle__sub__block3"></div>
+                                <div class="circle__sub__block4"></div>
+                                <div class="circle__sub__block5"></div>
+                                <div class="circle__sub__block6"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
             <!---social block--->
             <div class="footer__social__block">
