--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <!---circle---->
                 <div class="circle__wrapper">
                     <div class="main__content__circle__block">
+                        <div class="green__circle__block"></div>
                         <div class="main__content__circle">
                             <div class="main__content__circle__wrapper">
                                 <div class="circle__sub__block1"></div>
