--- a/index.html
+++ b/index.html
@@ -42,16 +42,19 @@
             <div class="footer__social__block">
                 <div class="footer__social__wrapper">
                     <div class="footer__social__img">
-                        <img src="" alt="">
+                        <img src="./style/icons/1.svg" alt="">
                     </div>
                     <div class="footer__social__img">
-                        <img src="" alt="">
+                        <img src="./style/icons/2.svg" alt="">
                     </div>
                     <div class="footer__social__img">
-                        <img src="" alt="">
+                        <img src="./style/icons/3.svg" alt="">
                     </div>
                     <div class="footer__social__img">
-                        <img src="" alt="">
+                        <img src="./style/icons/4.svg" alt="">
+                    </div>
+                    <div class="footer__social__img">
+                        <img src="./style/icons/5.svg" alt="">
                     </div>
                 </div>
             </div>
