--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="content__wrapper">
             <!---languages----->
             <div class="content__language__block">
-
+                <div class="language__circle__block">
+                    
+                </div>
             </div>
             <!---main content----->
             <div class="main__content__block">
