--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <!---languages----->
             <div class="content__language__block">
                 <div class="language__circle__block">
-                    
+                    <div class="language__circle__small1"></div>
+                    <div class="language__circle__small2"></div>
+                    <div class="language__circle__small3"></div>
                 </div>
             </div>
             <!---main content----->
