--- a/index.html
+++ b/index.html
@@ -15,15 +15,19 @@
             <!---languages----->
             <div class="content__language__block">
                 <div class="language__circle__block">
-                    <div class="language__circle__small1"></div>
-                    <div class="language__circle__small2"></div>
-                    <div class="language__circle__small3"></div>
+                    <a href="#" class="language__circle__small1">
+                        <img src="./style/icons/az.svg" alt="">
+                    </a>
+                    <a  href="#" class="language__circle__small2">
+                        <img src="./style/icons/en.svg" alt="">
+                    </a>
+                    <a  href="#" class="language__circle__small3">
+                        <img src="./style/icons/ru.svg" alt="">
+                    </a>
                 </div>
             </div>
             <!---main content----->
             <div class="main__content__block">
-                
-
                 <!---circle---->
                 <div class="circle__wrapper">
                     <div class="main__content__circle__block">
