--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Jeylan Intend</title>
 
     <link rel="stylesheet" href="./style/style.css">
+
+
+        <!-- Link Swiper's CSS -->
+        <link
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+      />
+  
 </head>
 <body>
     <!-----pc version-------->
@@ -26,7 +34,13 @@
                     </a>
                 </div>
             </div>
-            <!---main content----->
+            <!---slider block with content---->
+            <div class="main__slider__content">
+
+            </div>
+
+
+            <!---circle block----->
             <div class="main__content__block">
                 <!---circle---->
                 <div class="circle__wrapper">
