--- a/index.html
+++ b/index.html
@@ -1,93 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jeylan Intend</title>
 
-    <link rel="stylesheet" href="./style/style.css">
+    <link rel="stylesheet" href="./style/style.css" />
 
+    <!-- Link Swiper's CSS -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
 
-        <!-- Link Swiper's CSS -->
-        <link
-        rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
-      />
-  
-</head>
-<body>
+    <link rel="stylesheet" href="./style/swiper.css" />
+  </head>
+  <body>
     <!-----pc version-------->
     <div class="main__wrapper">
-        <div class="content__wrapper">
-            <!---languages----->
-            <div class="content__language__block">
-                <div class="language__circle__block">
-                    <a href="#" class="language__circle__small1">
-                        <img src="./style/icons/az.svg" alt="">
-                    </a>
-                    <a  href="#" class="language__circle__small2">
-                        <img src="./style/icons/en.svg" alt="">
-                    </a>
-                    <a  href="#" class="language__circle__small3">
-                        <img src="./style/icons/ru.svg" alt="">
-                    </a>
-                </div>
-            </div>
-            <!---slider block with content---->
-            <div class="main__slider__content">
-
-            </div>
-
-
-            <!---circle block----->
-            <div class="main__content__block">
-                <!---circle---->
-                <div class="circle__wrapper">
-                    <div class="main__content__circle__block">
-                        <div class="green__circle__block"></div>
-                        <div class="main__content__circle">
-                            <div class="main__content__circle__wrapper">
-                                <div class="circle__sub__block1"></div>
-                                <div class="circle__sub__block2"></div>
-                                <div class="circle__sub__block3"></div>
-                                <div class="circle__sub__block4"></div>
-                                <div class="circle__sub__block5"></div>
-                                <div class="circle__sub__block6"></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <!---social block--->
-            <div class="footer__social__block">
-                <div class="footer__social__wrapper">
-                    <div class="footer__social__img">
-                        <img src="./style/icons/1.svg" alt="">
-                    </div>
-                    <div class="footer__social__img">
-                        <img src="./style/icons/2.svg" alt="">
-                    </div>
-                    <div class="footer__social__img">
-                        <img src="./style/icons/3.svg" alt="">
-                    </div>
-                    <div class="footer__social__img">
-                        <img src="./style/icons/4.svg" alt="">
-                    </div>
-                    <div class="footer__social__img">
-                        <img src="./style/icons/5.svg" alt="">
-                    </div>
-                </div>
-            </div>
+      <div class="content__wrapper">
+        <!---languages----->
+        <div class="content__language__block">
+          <div class="language__circle__block">
+            <a href="#" class="language__circle__small1">
+              <img src="./style/icons/az.svg" alt="" />
+            </a>
+            <a href="#" class="language__circle__small2">
+              <img src="./style/icons/en.svg" alt="" />
+            </a>
+            <a href="#" class="language__circle__small3">
+              <img src="./style/icons/ru.svg" alt="" />
+            </a>
+          </div>
         </div>
+
+
+        <!---circle and slider block----->
+        <div class="main__content__block">
+                    <!---slider block with content---->
+        <div class="main__slider__content">
+            <!-- Swiper -->
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    Слайд машина
+                </div>
+                <div class="swiper-slide">Слайдер 2</div>
+                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">Slide 4</div>
+                <div class="swiper-slide">Slide 5</div>
+                <div class="swiper-slide">Slide 6</div>
+                <div class="swiper-slide">Slide 7</div>
+                <div class="swiper-slide">Slide 8</div>
+                <div class="swiper-slide">Slide 9</div>
+              </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+          <!---circle---->
+          <div class="circle__wrapper">
+            <div class="main__content__circle__block">
+              <div class="green__circle__block"></div>
+              <div class="main__content__circle">
+                <div class="main__content__circle__wrapper">
+                  <div class="circle__sub__block1"></div>
+                  <div class="circle__sub__block2"></div>
+                  <div class="circle__sub__block3"></div>
+                  <div class="circle__sub__block4"></div>
+                  <div class="circle__sub__block5"></div>
+                  <div class="circle__sub__block6"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!---social block--->
+        <div class="footer__social__block">
+          <div class="footer__social__wrapper">
+            <div class="footer__social__img">
+              <img src="./style/icons/1.svg" alt="" />
+            </div>
+            <div class="footer__social__img">
+              <img src="./style/icons/2.svg" alt="" />
+            </div>
+            <div class="footer__social__img">
+              <img src="./style/icons/3.svg" alt="" />
+            </div>
+            <div class="footer__social__img">
+              <img src="./style/icons/4.svg" alt="" />
+            </div>
+            <div class="footer__social__img">
+              <img src="./style/icons/5.svg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <!-----mobile version---------->
-    <div class="main__wrapper__mobile">
+    <div class="main__wrapper__mobile"></div>
 
-    </div>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper(".mySwiper", {
+        cssMode: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
 
+        mousewheel: false,
+        keyboard: true,
+      });
+    </script>
     <script src="./js/script.js"></script>
-</body>
+  </body>
 </html>
