--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
                 <div class="swiper-slide">Slide 8</div>
                 <div class="swiper-slide">Slide 9</div>
               </div>
-              <div class="swiper-button-next"></div>
-              <div class="swiper-button-prev"></div>
-              <div class="swiper-pagination"></div>
+
             </div>
           </div>
           <!---circle---->
@@ -76,6 +74,18 @@
               </div>
             </div>
           </div>
+        </div>
+        <!--navigation block---->
+        <div class="main__navigation__block">
+            <div class="swiper-button-next"></div>
+            <!------------>
+            <div class="main__number">
+                <img src="" alt="" class="main__number__img">
+                <p class="main__number__p" id="main__number__p">1</p>
+            </div>
+   <!------------>
+            <div class="swiper-button-prev"></div>
+
         </div>
         <!---social block--->
         <div class="footer__social__block">
