--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="swiper-button-next"></div>
             <!------------>
             <div class="main__number">
-                <img src="" alt="" class="main__number__img">
+                <img src="./style/icons/krug.svg" alt="" class="main__number__img">
                 <p class="main__number__p" id="main__number__p">1</p>
             </div>
    <!------------>
