--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <div class="main__content__circle__block">
               <div class="green__circle__block"></div>
               <div class="main__content__circle">
-                <div class="main__content__circle__wrapper">
+                <div class="main__content__circle__wrapper" id="circle__wrapper">
                   <div class="circle__sub__block1"></div>
                   <div class="circle__sub__block2"></div>
                   <div class="circle__sub__block3"></div>
                   <div class="circle__sub__block4"></div>
                   <div class="circle__sub__block5"></div>
-                  <div class="circle__sub__block6"></div>
+                  <div class="circle__sub__block6"></div> 
                 </div>
               </div>
             </div>
@@ -77,14 +77,14 @@
         </div>
         <!--navigation block---->
         <div class="main__navigation__block">
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-next" id="swiper-button-next"></div>
             <!------------>
             <div class="main__number">
                 <img src="./style/icons/krug.svg" alt="" class="main__number__img">
                 <p class="main__number__p" id="main__number__p">1</p>
             </div>
    <!------------>
-            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-prev" id="swiper-button-prev"></div>
 
         </div>
         <!---social block--->
