--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!------------>
             <div class="main__number">
                 <img src="./style/icons/krug.svg" alt="" class="main__number__img">
-                <p class="main__number__p" id="main__number__p">1</p>
+                <p class="main__number__p" id="main__number__p"></p>
             </div>
    <!------------>
             <div class="swiper-button-prev" id="swiper-button-prev"></div>
