--- a/index.html
+++ b/index.html
@@ -44,7 +44,16 @@
             <div class="swiper mySwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    Слайд машина
+                    <div class="slider__content__wrapper">
+                      <div class="slider__content__logo">
+                        <div class="content__logo__ing">
+                          <img src="./style/icons/logo.svg" alt="">
+                        </div>
+                        <div class="content__logo__ing">
+                          <img src="./style/icons/logo2.png" alt="">
+                        </div>
+                      </div>
+                    </div>
                 </div>
                 <div class="swiper-slide">Слайдер 2</div>
                 <div class="swiper-slide">Slide 3</div>
