--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="slider__content__wrapper">
+                      <!--?----------- -------->
+                      <div class="slider__content__back__image">
+                        
+                      </div>
+                      <!--?----------- -------->
                       <div class="slider__content__logo">
                         <div class="content__logo__ing">
                           <img src="./style/icons/logo.svg" alt="">
@@ -53,6 +58,33 @@
                           <img src="./style/icons/logo2.png" alt="">
                         </div>
                       </div>
+                      <!--?----------- -------->
+                      <div class="slider__content__clients">
+                        <div class="slider__content__clients__wrapper">
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                        </div>
+                        <div class="slider__content__clients__wrapper">
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                          <div class="slider__client__element">Hilton hotel</div>
+                        </div>
+                      </div>
+
+                      <!--?----------- -------->
                     </div>
                 </div>
                 <div class="swiper-slide">Слайдер 2</div>
