--- a/index.html
+++ b/index.html
@@ -88,7 +88,34 @@
                     </div>
                 </div>
                 <div class="swiper-slide">Слайдер 2</div>
-                <div class="swiper-slide">Slide 3</div>
+                <div class="swiper-slide">
+                    <div class="slider__content__wrapper">
+                      <div class="container">
+                        <div class="tab-cont">
+                            <button class="but" onclick="city(event, 'london')">London</button>
+                            <button class="but" onclick="city(event, 'paris')">Paris</button>
+                            <button class="but" onclick="city(event, 'tokyo')">Tokyo</button>
+                                      <button class="but" onclick="city(event, 'pizda')">asdasd</button>
+                        </div>
+                        <div class="tab-content" id="london">
+                            <h2>London</h2>
+                            <p>London is the capital city of England.</p>
+                        </div>
+                        <div class="tab-content" id="paris">
+                            <h2>Paris</h2>
+                            <p>Paris is the capital of France.</p>
+                        </div>
+                        <div class="tab-content" id="tokyo">
+                            <h2>Tokyo</h2>
+                            <p>Tokyo is the capital of Japan.</p>
+                        </div>
+                              <div class="tab-content" id="pizda">
+                            <h2>asdasd</h2>
+                            <p>Tokyo is the capital of Japan.</p>
+                        </div>
+                    </div>
+                    </div>
+                </div>
 
               </div>
 
