--- a/index.html
+++ b/index.html
@@ -89,14 +89,17 @@
                 </div>
                 <div class="swiper-slide">Слайдер 2</div>
                 <div class="swiper-slide">
-                    <div class="slider__content__wrapper">
+                    <div class="slider__content__wrapper slider__content__wrapper_3">
                       <div class="container">
                         <div class="tab-cont">
-                            <button class="but" onclick="city(event, 'london')">London</button>
-                            <button class="but" onclick="city(event, 'paris')">Paris</button>
-                            <button class="but" onclick="city(event, 'tokyo')">Tokyo</button>
-                                      <button class="but" onclick="city(event, 'pizda')">asdasd</button>
-                        </div>
+                            <button class="but" onclick="city(event, 'london')">Баку</button>
+                            <button class="but" onclick="city(event, 'paris')">Сумгаит</button>
+                            <button class="but" onclick="city(event, 'tokyo')">Хачмаз</button>
+                            <button class="but" onclick="city(event, 'pizda')">Шеки</button>
+                            <button class="but" onclick="city(event, 'pizda')">Гянджа</button>
+                            <button class="but" onclick="city(event, 'pizda')">Сабирабад</button>
+                            <button class="but" onclick="city(event, 'pizda')">Ленкорань</button>                
+                          </div>
                         <div class="tab-content" id="london">
                             <h2>London</h2>
                             <p>London is the capital city of England.</p>
