--- a/index.html
+++ b/index.html
@@ -92,30 +92,45 @@
                     <div class="slider__content__wrapper slider__content__wrapper_3">
                       <div class="container">
                         <div class="tab-cont">
-                            <button class="but" onclick="city(event, 'london')">Баку</button>
-                            <button class="but" onclick="city(event, 'paris')">Сумгаит</button>
-                            <button class="but" onclick="city(event, 'tokyo')">Хачмаз</button>
-                            <button class="but" onclick="city(event, 'pizda')">Шеки</button>
-                            <button class="but" onclick="city(event, 'pizda')">Гянджа</button>
-                            <button class="but" onclick="city(event, 'pizda')">Сабирабад</button>
-                            <button class="but" onclick="city(event, 'pizda')">Ленкорань</button>                
+                            <button class="but" onclick="city(event, 'baku')">Баку</button>
+                            <button class="but" onclick="city(event, 'sumqayit')">Сумгаит</button>
+                            <button class="but" onclick="city(event, 'hacmaz')">Хачмаз</button>
+                            <button class="but" onclick="city(event, 'seki')">Шеки</button>
+                            <button class="but" onclick="city(event, 'ganja')">Гянджа</button>
+                            <button class="but" onclick="city(event, 'sabirabad')">Сабирабад</button>
+                            <button class="but" onclick="city(event, 'lenkoran')">Ленкорань</button>                
                           </div>
-                        <div class="tab-content" id="london">
-                            <h2>London</h2>
+                        <div class="tab-content" id="baku">
+                            <h2>baku</h2>
                             <p>London is the capital city of England.</p>
                         </div>
-                        <div class="tab-content" id="paris">
-                            <h2>Paris</h2>
+                        <div class="tab-content" id="sumqayit">
+                            <h2>sumqayit</h2>
                             <p>Paris is the capital of France.</p>
                         </div>
-                        <div class="tab-content" id="tokyo">
-                            <h2>Tokyo</h2>
+                        <div class="tab-content" id="hacmaz">
+                            <h2>hacmaz</h2>
                             <p>Tokyo is the capital of Japan.</p>
                         </div>
-                              <div class="tab-content" id="pizda">
-                            <h2>asdasd</h2>
+                          <div class="tab-content" id="seki">
+                            <h2>seki</h2>
                             <p>Tokyo is the capital of Japan.</p>
                         </div>
+
+                        <div class="tab-content" id="ganja">
+                          <h2>ganja</h2>
+                          <p>London is the capital city of England.</p>
+                      </div>
+
+                      <div class="tab-content" id="sabirabad">
+                        <h2>sabirabad</h2>
+                        <p>London is the capital city of England.</p>
+                    </div>
+
+                    <div class="tab-content" id="lenkoran">
+                      <h2>lenkoran</h2>
+                      <p>London is the capital city of England.</p>
+                  </div>
                     </div>
                     </div>
                 </div>
